# SourceDecomposition

./: .gitignore  .pylintrc  README.md  calc_pd_weights.py  calc_ss_weights.py  create_resp_mat.py  panel_positions.csv  position_decomposer.py  rx_on_pos  src_name_list  write_ad1_resp_func.py  write_nai_resp_func.py  write_resp_func.py
ComputePatches/: decomp_ninth  decomp_quarter  decomp_sixteenth  decomp_whole
MakePatchworkFile/: BGFieldTools.hh  annotated  det_coord_patches  make_rxon_patchwork.C  rxon_grid.h  write_grid_helper.py
PatchSpectrumCalc/: decomp_ninth  decomp_pts  decomp_quarter  decomp_sixteenth  decomp_whole  makefile
PerformDecomp/: decomp_input  decomp_mega  decomp_ninth  decomp_pts  decomp_quarter  decomp_sixteenth  decomp_whole
PerformDecomp/src/: CMakeLists.txt  main.cpp
PerformDecomp/src/Decomposition/: Decomposer.cpp  Decomposer.h
PerformDecomp/src/InputLib/: InData.cpp  InData.h  InParser.h  ParseFunc.h
PerformDecomp/src/RootInterface/: DataDumper.cpp  DataDumper.h  ResponseMatrixBuilder.cpp  ResponseMatrixBuilder.h  ScanGrabber.cpp  ScanGrabber.h
RecursiveSegmentation/: full_sum  makefile  recurSeg.py  recurseg.py  rename_funcs.py  sum_quartets.py  transfer_funcs.C
TestAllDecomps/: temp.py
WeightComputation/: calc_pd_weights.py  calc_ss_weights.py
input_data/: AD1_Weights.csv  NaI_Weights.csv  bottom_panels.csv  front_panels.csv  left_panels.csv  right_panels.csv  rx_on_pos1  rx_on_pos3
libpd/: __init__.py  backend_interface.py  detector.py  flat_sources.py  geom_base.py  makefile  shell_sources.py  source_construction.py  (+1 more)
(+122 files in other folders)
